added mvp.html and it's style-1.css

--- a/index.html
+++ b/index.html
@@ -12,42 +12,72 @@
       <a class="button__header" href="#"><button>Menu</button></a>
         <nav>
           <ul class="nav__links">
-            <li><a href="#room1">Room1</a></li>
-            <li><a href="#room2">Room2</a></li>
-            <li><a href="#room3">Room3</a></li>
-            <li><a href="#room4">Room4</a></li>
-            <li><a href="#room5">Room5</a></li>
-            <li><a href="#room6">Room6</a></li>
+            <li><a href="#room1">Solarium</a></li>
+            <li><a href="#room2">Ceretta</a></li>
+            <li><a href="#room3">Unghie e Manicure</a></li>
+            <li><a href="#room4">Capelli</a></li>
+            <li><a href="#room5">Ciglia e Sopracciglia</a></li>
+            <li><a href="#room6"></a>Uomo</li>
           </ul>
         </nav>
         <div><a href="#profile"><img class = "profile" src="/images/hiclipart.com.png" title="profile" alt="profile"></a></div>
     </header>
     <section class = "table header">
-      <h1>ROOM 1</h1>
+      <h1>SOLARIUM</h1>
       </section>
     <main>
           <section class="tablebody">
             <table>
               <thead>
                 <tr>
+                  <th> 15:00 </th>
+                  <th> 15:15 </th>
+                  <th> 15:30 </th>
+                  <th> 15:45 </th>
+                  <th> 16:00 </th>
+                  <th> 16:15 </th>
+                  <th> 16:30 </th>
+                  <th> 16:45 </th>
                   <th> 17:00 </th>
+                  <th> 17:15 </th>
                   <th> 17:30 </th>
+                  <th> 17:45 </th>
                   <th> 18:00 </th>
-                  <th> 18:30 </th>
-                  <th> 19:00 </th>
-                  <th> 19:30 </th>
-                  <th> 20:00 </th>
-                  <th> 20:30 </th>
-                  <th> 21:00 </th>
-                  <th> 21:30 </th>
-                  <th> 22:00 </th>
-                  <th> 22:30 </th>
-                  <th> 23:00 </th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td> table 1 </td>
+                  <td> Sunbath 1 </td>
+                  <td> Markus Peintner </td>
+                  <td> Lukas Egger </td>
+                  <td> Ulrike Unterberger </td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td> Sunbath 2 </td>
+                  <td> Caroline Unterhofer </td>
+                  <td> Marion Berger </td>
+                  <td> Karin Laner </td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td> Sunbath 4 </td>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -62,37 +92,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <td> table 2 </td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td> table 3 </td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td> table 4 </td>
+                  <td> Sunbath 5 </td>
                   <td></td>
                   <td></td>
                   <td></td>
